--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,26 @@ version: "3.9"
 
 services:
   db:
-    network_mode: satbnet
-    image: postgres
+    restart: always
+    #network_mode: satbnet
+    image: postgres:latest
     volumes:
       - postgres_db:/var/lib/postgresql/data
       - ./postgres_config:/var/lib/postgresql/config
-    ports:
-      - "5432:5432"
     environment:
       - POSTGRES_NAME=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5432:5432"
 
   web:
-    network_mode: satbnet
+    #network_mode: satbnet
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
+    command: python pjtsite/manage.py runserver 0.0.0.0:8000
+
     ports:
       - "8000:8000"
     environment:
