--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-Django>=3.0,<4.0
-psycopg2>=2.8
+asgiref==3.5.0
+Django==3.2.13
+django-extensions==3.1.5
+numpy==1.23.0
+pandas==1.4.3
+psycopg2==2.9.3
+python-dateutil==2.8.2
+pytz==2022.1
+six==1.16.0
+sqlparse==0.4.2
