--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-asgiref==3.5.0
-Django==3.2.13
-django-extensions==3.1.5
+Django==4.2.3
+gunicorn==21.2.0
+psycopg2-binary==2.9.6
+asgiref==3.7.1
+django-extensions==3.2.1
 numpy==1.26.0 
-pandas==2.2.1
-psycopg2-binary==2.9.9
-# psycopg2==2.8.3
-python-dateutil==2.8.2
-pytz==2022.1
+pandas==2.1.2
+python-dateutil==2.9.0
+pytz==2023.2
 six==1.16.0
-sqlparse==0.4.2
-chardet==5.1.0
+sqlparse==0.4.3
+chardet==5.2.0
 
 # . env/bin/activate
